<resources>
    <string name="app_name">Kanu s.a.M. App</string>
    <string name="ip">IP-Adresse:</string>
    <string name="verbinden">Verbinden</string>
    <string name="beschriftung_Station">Ihre Messstation:</string>
    <string name="anweisung_Auswahl_Startnummer">Bitte wählen Sie die Startnummer aus, welche die Messstation erreicht hat, und drücken Sie den Button \"Zeit nehmen\".</string>
    <string name="zeit_nehmen">Eingabe bestätigen!</string>
    <string name="alle_Werte_eingetragen">Die Zeiten für alle Startnummern sind eingetragen. Vielen Dank für die Benutzung der Android Connector App HTTP!</string>
    <string name="waehlen">Eingabe Strafzeiten</string>
    <string name="information_Eingabe_Strafe">Strafsekunden:</string>
    <string name="startnummer">Startnummer:</string>
    <string name="tor">Tor:</string>
    <string name="ip_start">192.168.1.234</string>
    <string name="info_starten_stoppen">Zeitmessungsmodus</string>
    <string name="start">Starten!</string>
    <string name="stopp">Stoppen!</string>
    <string name="info_start_Activity">Startnummer: </string>
    <string name="aktualisieren">Aktualisieren!</string>
    <string name="dummy">Aufgrund einer Netzwerkverzögerung können keine Informationen angezeigt werden.</string>
    <string name="nicht_verbunden">Nicht verbunden.</string>
    <string name="gek">Gekentert!</string>
    <string-array name="spinner_standard">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="keine_vorige">Keine vorige Startnummer!</string>
    <string name="keine_folgende">Keine folgende Startnummer!</string>
    <string name="kein_letzter_Eintrag">Es wurden keine weiteren Strafzeiten gefunden.</string>
    <string name="letzte_eintraege">Ihre letzten Einträge:</string>
    <string-array name="eintraege">
        <item>Sie haben in der aktuellen Sitzung noch keine Strafzeiten eingetragen.</item>
    </string-array>
</resources>
