<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.ackermann.eric.androidconnectorapphttp.StartActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/info_start_Activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_starten"
        android:textSize="@dimen/textview_text_size" />

    <TextView
        android:text="@string/dummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/lauf_start"
        android:textSize="16sp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/startnummer_start" />

    <Button
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/starter" />
    <Button
        android:text="@string/aktualisieren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aktualisierenStart" />
</LinearLayout>
</ScrollView>