<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/Kanu_s.a.M.">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_stopp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.ackermann.eric.androidconnectorapphttp.StoppActivity"
    android:orientation="vertical"
    android:background="@color/Kanu_s.a.M.">

    <TextView
        android:text="@string/dummy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/lauf_stopp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/info_stoppen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_start_Activity"
        android:textSize="@dimen/textview_text_size" />

    <Spinner
        android:id="@+id/startnummer_stopp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp" />

    <Button
        android:text="@string/stopp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/stopp"
        android:id="@+id/stoppButton" />
    <Button
        android:text="@string/aktualisieren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/reload"
        android:id="@+id/aktualisierenStopp" />
</LinearLayout>
</ScrollView>