<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Kanu_s.a.M.">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Kanu_s.a.M."
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="de.ackermann.eric.androidconnectorapphttp.ConnectionActivity">

        <TextView
            android:id="@+id/Hinweis_IP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/ip"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="@dimen/textview_text_size"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!--  <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messstation_wahl"
        android:layout_below="@+id/Messstation_TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:spinnerMode="dialog"
        android:backgroundTint="#ffffff"
        android:background="@android:color/background_light"
        android:foreground="@android:color/background_dark"
        android:foregroundTint="@android:color/black"
        android:hapticFeedbackEnabled="true"
        android:entries="@array/spinner_standard" /> -->

        <Spinner
            android:id="@+id/messstation_wahl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Kanu_s.a.M."
            android:entries="@array/spinner_standard"
            android:spinnerMode="dialog"
            android:layout_below="@+id/Messstation_TextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/tabelle"
            android:text="@string/waehlen"
            android:layout_below="@+id/messstation_wahl"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/ip_Eingabe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:editable="true"
            android:inputType="textUri"
            android:text="@string/ip_start"
            android:textColor="#000000"
            tools:inputType="textUri"
            android:layout_below="@+id/Hinweis_IP"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/Messstation_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ip_Eingabe"
            android:layout_marginTop="79dp"
            android:text="@string/beschriftung_Station"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="@dimen/textview_text_size" />

        <Button
            android:id="@+id/verbinden_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ip_Eingabe"
            android:layout_alignStart="@+id/ip_Eingabe"
            android:layout_below="@+id/ip_Eingabe"
            android:layout_marginTop="21dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/connect"
            android:text="@string/verbinden" />

        <TextView
            android:id="@+id/info_Start_Stopp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button"
            android:layout_marginTop="22dp"
            android:text="@string/info_starten_stoppen"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/textview_text_size" />

        <Button
            android:id="@+id/stoppButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/startButton"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/stopp"
            android:text="@string/stopp" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/info_Start_Stopp"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/start"
            android:text="@string/start" />

        <ImageView
            android:id="@+id/statusbild"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/nicht_verbunden"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nicht_verbunden"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/rot_255"
            android:layout_alignBaseline="@+id/verbinden_button"
            android:layout_alignBottom="@+id/verbinden_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</ScrollView>