<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.ackermann.eric.androidconnectorapphttp.MainActivity"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/anweisung_Wahl_SN"
        android:text="@string/dummy"
        android:textAlignment="center" />

    <TextView
        android:text="@string/dummy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lauf"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dummy"
        android:id="@+id/stoppuhr"
        android:visibility="invisible"
        android:textColor="@android:color/background_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/startnummer"
        android:id="@+id/textView2"
        android:layout_marginTop="26dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startnummer"
        android:spinnerMode="dialog"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strafenTabelle"
        android:layout_marginTop="38dp">
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zeit_nehmen"
        android:id="@+id/zeitnahme" />

    <Button
        android:text="@string/aktualisieren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aktualisierenButton" />

</LinearLayout>
</ScrollView>